# yesodoro-reboot

./: .ghci  .gitignore  .jshintignore  .jshintrc  Application.hs  Forms.hs  Foundation.hs  Handler.hs  Import.hs  LICENSE  Makefile  Model.hs  Procfile  Settings.hs  TODO  Types.hs  Util.hs  Vagrantfile  bower.json  build-keter.sh  cabal.config  create-test-account.hs  devel.hs  gen-tags.sh  make-cabal-deps.sh  npm-shrinkwrap.json  package.json  yesodoro-reboot.cabal
.halcyon/: pre-build-hook
Handler/: Api.hs  Client.hs  Home.hs  Notes.hs  Plans.hs  Settings.hs  Tasks.hs  Templates.hs
Model/: Note.hs  Plan.hs  Types.hs
Settings/: Development.hs
Util/: Angular.hs  AuthGoogleEmail.hs  HiddenAuthEmail.hs  Http.hs  SessionBackend.hs  Templates.hs
Widget/: Expandy.hs  TaskList.hs
bower_components/ng-group/: .bower.json
config/: karma.conf.js  keter.yaml  models  postgresql.yml  routes  routes-client  routes-templates  settings.yml
messages/: en-GB.msg  en-US.msg  en.msg
script/: run-heroku.sh
static/css/: expandy.css
static/js/: expandy.js  util.js
static/js/app/: controllers.js  directives.js  filters.js  models.js  services.js
static/js/app/controllers/: NotesCtrl.js  PlansCtrl.js  SettingsCtrl.js  TasksCtrl.js
static/js/app/directives/: billboard.js  hibiIcon.js  hibiNote.js  hibiTask.js  ngBlur.js  ssClickToEdit.js  ssEditablePopup.js  ssKeyboardDirectives.js
static/js/app/models/: Task.js
static/js/app/services/: Auth.js  LoginPopup.js  Popup.js  Settings.js  Tasks.js  billboard.js  exceptionHandler.js  httpErrorHandler.js
static/js/homepage/: services.js
static/js/lib/: expandy.js  functionBindPolyfill.js  util.js
templates/: default-layout-wrapper.hamlet  default-layout.lucius  expandy.hamlet  expandy.julius  expandy.lucius  homepage.hamlet  homepage.julius  homepage.lucius  login.hamlet  login.lucius  new-design.hamlet  new-design.julius  new-design.lucius  new-layout-wrapper.hamlet  new-layout.hamlet  new-layout.lucius  notes.hamlet  notes.julius  tasks.cassius  tasks.hamlet  tasks.julius
templates/homepage/: home.hamlet
templates/new-design/: settings.hamlet  task.hamlet  tasks-done.hamlet  tasks-later.hamlet  tasks-today.hamlet
templates/notes/: note.hamlet
templates/plans/: plan-tr.hamlet
templates/tasks/: task-tr-ng.hamlet  task-tr.hamlet  task-tr.julius  tasks-old.hamlet
tests/casper/: smoke.js
tests/jasmine/: filtersSpec.js
tests/jasmine/controllers/: NotesCtrlSpec.js  SettingsCtrlSpec.js  TasksCtrlSpec.js
tests/jasmine/directives/: billboardSpec.js  hibiIconSpec.js  hibiNoteSpec.js  hibiTaskSpec.js
tests/jasmine/models/: TaskSpec.js
tests/jasmine/services/: AuthSpec.js  LoginPopupSpec.js  PopupSpec.js  SettingsSpec.js  TasksSpec.js  billboardSpec.js
tests/jasmine/support/: functionBindPolyfill.js  matchers.js
