name:              yesodoro-reboot
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Sam Stokes
maintainer:        Sam Stokes
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://yesodoro-reboot.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Model.Types
                     Model.Note
                     Model.Plan
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Forms
                     Handler.Api
                     Handler.Home
                     Handler.Tasks
                     Handler.Plans
                     Handler.Settings
                     Util
                     Util.Angular
                     Widget.Expandy

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        -- TODO currently modernised branch compiles with warnings, fix that
        -- ghc-options:   -Wall -Werror -threaded -O2
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base
                 , template-haskell
                 , yesod-platform
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static
                 , http-conduit
                 , aeson
                 , yaml
                 , text
                 , bytestring
                 , base64-bytestring
                 , transformers
                 , mtl
                 , blaze-markup
                 , hamlet
                 , shakespeare-text
                 , shakespeare-js
                 , persistent
                 , persistent-template
                 , persistent-postgresql
                 , yesod-persistent
                 , wai
                 , wai-extra
                 , time
                 , old-locale
                 , http-types
                 , cookie
                 , clientsession
                 , hjsmin
                 , data-default
                 , safe
                 , fast-logger
                 , wai-logger
                 , monad-logger
                 , directory
                 , warp

executable         yesodoro-reboot
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , yesodoro-reboot
                     , yesod

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , yesodoro-reboot
                 , yesod-test
                 , yesod-default
                 , yesod-core
