name:              yesodoro-reboot
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Sam Stokes
maintainer:        Sam Stokes
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://yesodoro-reboot.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False
Flag ci
    Description:   Build with settings for CI - fast but picky
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Types
                     Model
                     Model.Note
                     Model.Plan
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler
                     Handler.Api
                     Handler.Client
                     Handler.Home
                     Handler.Tasks
                     Handler.Notes
                     Handler.Plans
                     Handler.Settings
                     Handler.Templates
                     Util
                     Util.Http
                     Util.Angular
                     Util.HiddenAuthEmail
                     Util.Templates
                     Widget.Expandy
                     Widget.TaskList

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
      if flag(ci)
        ghc-options:   -Wall -Werror -threaded -O0
        cpp-options:   -DDEVELOPMENT
      else
        ghc-options:   -Wall -Werror -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                DoAndIfThenElse

    build-depends: base                          >= 4          && < 5
                 , yesod-platform
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , yesod-test
                 , clientsession
                 , bytestring
                 , text
                 , persistent
                 , yesod-persistent
                 , yesod-json
                 , persistent-postgresql
                 , template-haskell
                 , hamlet
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , time
                 , blaze-markup
                 , aeson
                 , transformers
                 , transformers-compat
                 , old-locale
                 , pureMD5
                 , base64-bytestring
                 , http-types
                 , data-default
                 , cookie
                 , safe
                 , unordered-containers
                 , heroku
                 , cereal
                 , exceptions
                 , monad-logger
                 , fast-logger
                 , wai-logger

executable         yesodoro-reboot
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , yesodoro-reboot
                     , yesod
                     , yesod-default

executable         yesodoro-reboot-create-test-account
    if flag(library-only)
        Buildable: False

    if flag(dev)
      ghc-options:   -Wall -threaded -O0
    else
      ghc-options:   -Wall -Werror -threaded -O0

    extensions:        OverloadedStrings
                       TypeFamilies

    main-is:           ../create-test-account.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , yesodoro-reboot
                     , monad-logger
                     , persistent
                     , resourcet
                     , safe
                     , text
                     , time
                     , transformers
                     , yesod
                     , yesod-auth

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , yesodoro-reboot
                 , yesod-test
                 , yesod-default
                 , yesod-core
